--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./JS/script.js"></script>
+    <script src="./JS/script.js" type="module"></script>
 </body>
 </html>
